name:                carma-test
version:             0.1.0.0
synopsis:            Testing carma
description:         Tests carma
homepage:            https://github.com/f-me/carma-test
license:             BSD3
license-file:        LICENSE
author:              Alexandr Ruchkin
maintainer:          voidex@formalmethods.ru
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

executable carma-test
  hs-source-dirs: src
  main-is: carma-test.hs
  other-modules:
    Network.HTTP.Request
    System.Log.Carma
  build-depends:
    aeson == 0.6.*,
    base == 4.6.*,
    bytestring == 0.10.*,
    conduit == 0.5.*,
    containers == 0.5.*,
    network == 2.*,
    http-types == 0.7.*,
    http-conduit == 1.8.*,
    http-conduit-browser == 1.7.*,
    mtl == 2.*,
    regex-posix == 0.95.*,
    text == 0.11.*,
    transformers == 0.3.*
