name:                carma-test
version:             0.1.0.0
synopsis:            Testing carma
description:         Tests carma
homepage:            https://github.com/f-me/carma-test
license:             BSD3
license-file:        LICENSE
author:              Alexandr Ruchkin
maintainer:          voidex@formalmethods.ru
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  exposed-modules:
    Network.HTTP.Request
    System.Log.Carma
  build-depends:
    aeson == 0.6.*,
    base == 4.6.*,
    bytestring == 0.10.*,
    conduit == 0.5.*,
    containers == 0.5.*,
    network == 2.*,
    http-types == 0.7.*,
    http-conduit == 1.8.*,
    http-conduit-browser == 1.7.*,
    mtl == 2.*,
    regex-posix == 0.95.*,
    text == 0.11.*,
    transformers == 0.3.*

executable carma-test-run
  hs-source-dirs: tools
  main-is: carma-test-run.hs
  build-depends:
    base == 4.6.*,
    aeson == 0.6.*,
    bytestring == 0.10.*,
    carma-test,
    text == 0.11.*,
    transformers == 0.3.*

executable carma-filter
  hs-source-dirs: tools
  main-is: carma-filter.hs
  build-depends:
    base == 4.6.*,
    aeson == 0.6.*,
    carma-test,
    text == 0.11.*,
    transformers == 0.3.*

executable carma-log-diff
  hs-source-dirs: tools
  main-is: carma-log-diff.hs
  build-depends:
    base == 4.6.*,
    aeson == 0.6.*,
    bytestring == 0.10.*,
    carma-test,
    carma-sync == 0.1.2.*,
    mtl == 2.1.*,
    text == 0.11.*,
    transformers == 0.3.*,
    unordered-containers == 0.2.*
